--- a/reference.htm
+++ b/reference.htm
@@ -6,8 +6,7 @@
 <link href="_css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-HTML Essential Training
-HTML Reference
+<h2>HTML Reference </h2>
 <ul>
   <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
   <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
@@ -16,16 +15,16 @@ HTML Reference
   <li><a href="next.htm" title="Next steps">Next steps</a></li>
 </ul>
 <p>On this page you&rsquo;ll find a quick reference to common HTML terms and a table of frequently used <a href="#named">named character entities</a>.</p>
-HTML Terms
+<H3>HTML Terms</H3>
 <dl>
   <dt>Attribute</dt>
   <dd> An HTML element property that provides additional information or functionality for an element. Attributes appear as a name/value pair with the value contained in quotation marks. </dd>
   <dt>Block-Level Element</dt>
-  <dd>HTML tags that create blocks of content within the document such as headings and paragraphs. Block-level elements typically stack one on top of each other based on the order they appear in the code. </dd>
+  <dd>HTML &quot;tags&quot; that create blocks of content within the document such as headings and paragraphs. Block-level elements typically stack one on top of each other based on the order they appear in the code. </dd>
   <dt>Child Element </dt>
-  <dd>Any HTML element that is contained inside another HTML element. Child element tags must close before their parent element tags. </dd>
-  <dt>Closing Tag </dt>
-  <dd>Appears after an element&rsquo;s content and indicates the end of an element. Is identical to an element&rsquo;s opening tag with the addition of a forward slash (/) prior to the tag&rsquo;s character. </dd>
+  <dd>Any HTML element that is contained inside another HTML element. Child element &quot;tags&quot; must close before their parent element &quot;tags&quot;. </dd>
+  <dt>Closing &quot;tag&quot; </dt>
+  <dd>Appears after an element&rsquo;s content and indicates the end of an element. Is identical to an element&rsquo;s opening &quot;tag&quot; with the addition of a forward slash (/) prior to the &quot;tag&quot;&rsquo;s character. </dd>
   <dt>Comment </dt>
   <dd>Reference information added to the code. May include an overview of more complex code, a reminder for future authors, or communications within a team. </dd>
   <dt>CMS </dt>
@@ -35,9 +34,9 @@ HTML Terms
   <dt>Doctype </dt>
   <dd>Short for <b>Document Type Declaration</b>. Appears at the top of all HTML documents to trigger standards mode and identifies the version of HTML used by the document. </dd>
   <dt>DOM </dt>
-  <dd>The DOM, or <b>Document Object Model</b>, is a representation of documents like HTML. The DOM can be thought of as an outline where tags are represented by &ldquo;nodes.&rdquo; Scripting languages like JavaScript reference the DOM when accessing or modifying page content. </dd>
+  <dd>The DOM, or <b>Document Object Model</b>, is a representation of documents like HTML. The DOM can be thought of as an outline where &quot;tags&quot; are represented by &ldquo;nodes.&rdquo; Scripting languages like JavaScript reference the DOM when accessing or modifying page content. </dd>
   <dt>Elements </dt>
-  <dd>HTML elements consist of an HTML tag, used to identify the content, and the content itself. Is often used interchangeably with the term tags although technically tags only refer to the tag itself. </dd>
+  <dd>HTML elements consist of an HTML &quot;tag&quot;, used to identify the content, and the content itself. Is often used interchangeably with the term &quot;tags&quot; although technically &quot;tags&quot; only refer to the &quot;tag&quot; itself. </dd>
   <dt>FTP </dt>
   <dd>FTP stands for <b>File Transfer Protocol</b>. It&rsquo;s a common protocol used for transferring large files from one server to another. </dd>
   <dt>HTTP </dt>
@@ -47,15 +46,15 @@ HTML Terms
   <dt>JavaScript </dt>
   <dd>Scripting language developed by Netscape and used to control much of the functionality and behavior on the web. </dd>
   <dt>Metadata </dt>
-  <dd>Additional information about the document or document content, typically stored in meta tags. </dd>
+  <dd>Additional information about the document or document content, typically stored in meta &quot;tags&quot;. </dd>
   <dt>MIME Type </dt>
   <dd>Short for <b>Multipurpose Internet Mail Extension,</b> MIME types are used to tell user agents what type of program a file or extension is. Without a proper MIME type, user agents can have trouble properly running applications or processing files. </dd>
   <dt>Parent Element </dt>
   <dd>An HTML element that contains another element. It is possible for an element to be a child of one element and the parent of another. </dd>
   <dt>Replaced Element </dt>
   <dd>Any HTML element where the contents of the element are replaced by something else. Examples would be images, video, or other plug-in content. </dd>
-  <dt>Tag </dt>
-  <dd>Markup characters that indicate what type of content appear on the page. Most tags consist of both an opening and closing tag. </dd>
+  <dt>&quot;tag&quot; </dt>
+  <dd>Markup characters that indicate what type of content appear on the page. Most &quot;tags&quot; consist of both an opening and closing &quot;tag&quot;. </dd>
   <dt>URL </dt>
   <dd>URL stands for <b>Uniform Resource Locator</b>. It serves as the address of a document or other resource on the web. </dd>
   <dt>W3C </dt>
@@ -71,7 +70,7 @@ Common Named Character Entities
     <th scope="col">Entity </th>
   </tr>
   <tr>
-    <td class="center"> </td>
+    <td class="center"> &quot; </td>
     <td>double quotation mark</td>
     <td><b>&amp;quot;</b></td>
   </tr>
