Chapter 5 Creating Links Anton Nordlin

--- a/links.htm
+++ b/links.htm
@@ -67,7 +67,7 @@
             </main>
 <pre>&lt;a href=&rdquo;faq.htm#camp&rdquo;&gt;Read our FAQ on camping.&lt;/a&gt;</pre>
 <footer role = "contentinfo">
-<p>&copy; lynda.com | follow me and lynda.com on Twitter! @jameswillweb @lyndadotcom</p>
+<p>&copy; <a href="http://www.lynda.com" title="lynda.com"target="_blank">lynda.com</a> | follow me and href lynda.com on Twitter! @jameswillweb <a href="https://twitter.com/lynda?lang=en" title="@lynda"target="_blank">@lynda</a> </p>
     </footer>
 </body>
 </html>
