--- a/reference.htm
+++ b/reference.htm
@@ -16,7 +16,7 @@
   <li><a href="next.htm" title="Next steps">Next steps</a></li>
 </ul>
 </nav>
-<p>On this page you&rsquo;ll find a quick reference to common HTML terms and a table of frequently used <a href="#named">named character entities</a>.</p>
+<p>On this page you&rsquo;ll find a quick reference to common HTML terms and a table of frequently used <a href="#one" title="named character entities">named character entities</a>.</p>
     </header>
     
 <main role="main">
@@ -69,7 +69,7 @@
 <table border="1" cellspacing="0" cellpadding="0" summary="A quick reference of named character entities, including an example of the character, a description, and the entity code.">
   
   <caption>
-Common Named Character Entities 
+<h3 id="one"> Common Named Character Entities </h3>
   </caption>
   <tr>
     <th scope="col">Character </th>
